--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
 		"rootDir": "src",
 		"strict": true
 	},
+	"include": [
+		"src/**/*.ts",
+		"src/*.ts",
+		"src"
+	],
 	"exclude": [
 		"node_modules"
 	]
